--- a/class/main.css
+++ b/class/main.css
@@ -32,7 +32,7 @@ body {
 }
 
 input, textarea {
-    font-size: 20px;
+    font-size: 30px;
     height: 40px;
 }
 
@@ -63,6 +63,10 @@ a:link, a:visited, a:hover, a:active {
     display: none;
 }
 
+#actionAlertMessage, #infoAlertMessage {
+    font-size: 40px !important;
+}
+
 .lb {
     border: 1px solid #ddd;
     margin-bottom: 25px;
@@ -70,7 +74,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .lbTitle {
-    font-size: 20px;
+    font-size: 30px;
     margin: 20px auto;
     color: #3478F6;
     text-align: center !important;
@@ -137,7 +141,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #customListLabel, .listLabel {
-    font-size: 20px;
+    font-size: 30px;
     margin: 20px auto 20px auto !important;
     color: #3478F6;
     border-bottom: 2px solid #333;
@@ -152,7 +156,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #customSortListLabel, #allergiesLabel {
-    font-size: 20px;
+    font-size: 30px;
     color: #3478F6;
     margin: 0px auto 10px auto;
 }
@@ -185,7 +189,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .checkboxLabel {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .checkboxContainer {
@@ -374,7 +378,7 @@ a:link, a:visited, a:hover, a:active {
 #infoAlertTitle {
     color: red;
     font-family: Byom-Icons-Trial;
-    font-size: 75px;
+    font-size: 125px;
     margin: 30px auto;
 }
 
@@ -505,14 +509,14 @@ a:link, a:visited, a:hover, a:active {
 
 .name3 {
     margin: 10px auto;
-    font-size: 20px;
+    font-size: 30px;
     text-align: left;
 }
 
 .sortValues {
     margin: 0px 0px 20px 0px;
     color: #bbb;
-    font-size: 20px !important;
+    font-size: 30px !important;
 }
 
 #teamListContainer, #genderListContainer, #attListContainer, #attArchiveListContainer {
@@ -590,7 +594,7 @@ a:link, a:visited, a:hover, a:active {
 
 #nextPlayer {
     margin: 15px auto;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .cancelButton {
@@ -616,7 +620,7 @@ a:link, a:visited, a:hover, a:active {
 
 .logEntry, .gameLogEntry {
     margin-top: 20px !important;
-    font-size: 20px !important;
+    font-size: 25px !important;
 }
 
 .note {
@@ -658,7 +662,7 @@ a:link, a:visited, a:hover, a:active {
 #email {
     height: 35px;
     width: 300px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 #searchMain {
@@ -736,7 +740,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #editStudentPop p, #newStudentPop p {
-    font-size: 20px;
+    font-size: 30px;
     margin: 30px auto 10px auto;
 }
 
@@ -770,7 +774,7 @@ a:link, a:visited, a:hover, a:active {
 
 #currentPlayer {
     margin: 0px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .progressBarTable {
@@ -779,8 +783,8 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .progressBarTable td {
-    height: 19px;
-    width: 9.5px;
+    height: 40px;
+    width: 20px;
 }
 
 .asmvInfoTable, #rankChartTable, #attStatsTable, #attListTable, #studentAttTable, #studentMenuTable, #calendarTable {
@@ -795,7 +799,7 @@ a:link, a:visited, a:hover, a:active {
 
 #studentAttTable td, #attListTable td, #attStatsTable td {
     height: 40px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 #calendarTable td {
@@ -826,7 +830,6 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #studentStatsPop p {
-    font-size: 18px;
     text-align: left;
 }
 
@@ -883,14 +886,14 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #attArchiveDate {
-    font-size: 20px;
+    font-size: 30px;
     color: orange;
     margin: 15px auto;
 }
 
 #studentProperties {
     text-align: left;
-    font-size: 20px;
+    font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
     color: #72AED3;
 }
@@ -901,7 +904,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .asmvInfoTable {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .asmvInfoTable td {
@@ -1003,7 +1006,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 #currentDate {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .seperatorDiv {
