--- a/class/main.css
+++ b/class/main.css
@@ -1000,6 +1000,10 @@ a:link, a:visited, a:hover, a:active {
     color: darkgoldenrod;
 }
 
+#dispRankNamePromo {
+    margin-top: 50px;
+}
+
 #currentDate {
     font-size: 30px;
 }
